# ashare-quant-research-win11

./: .env.example  .gitignore  DEPLOY-GUIDE.md  README.md  WINDOWS-SETUP.md  ashare_quant  pyproject.toml
app/: dashboard.py  decision_app.py
config/: auth.example.yaml  notify.example.yaml
configs/: research.yaml
experiments/: 20260315_030350_stage1_mock_baseline.json  20260315_030414_stage1_round2_akshare_baseline.json  20260315_030748_stage1_round2_akshare_baseline.json  20260315_030834_stage1_round2_akshare_baseline.json  20260315_033150_stage1_round3_tushare_baseline.json
quant-next/: README-MIGRATION.md
quant-next/adapters/: legacy_ashare_adapter.py
quant-next/configs/: schema.yaml
quant-next/scripts/: check_migration.py
scripts/: bootstrap_from_data_package.sh  bootstrap_from_data_package_win.ps1  fetch_full_sina.py  run_dashboard.sh  run_decision_app.sh  run_stage11_win.ps1  run_stage16_win.ps1  run_stock_fetch_win.ps1
src/ashare_quant/backtest/: simulator.py  simulator_realistic.py
src/ashare_quant/config/: research_config.py  settings.py
src/ashare_quant/experiments/: tracker.py
src/ashare_quant/factors/: price_volume.py
src/ashare_quant/pipeline/: stage10_failure_diagnosis.py  stage11_targeted_repair.py  stage12_dual_signal_strategy.py  stage13_incremental_refresh.py  stage14_generate_nextday_plan.py  stage16_ml_multifactor_fund_longhold.py  stage1_bootstrap.py  stage1_data_ingest.py  stage1_round2_akshare.py  stage8_ml_ranking.py  (+14 more)
src/ashare_quant_research/: __init__.py
tests/: test_config.py  test_no_global_rank.py  test_ranking.py
(+10 files in other folders)
